# HP-EngineVulkan

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: commandpool.hpp.35E3374B55B689F0.idx  handle.hpp.F4C0FEA5D7463DAF.idx  spirv.hpp.4550F5684721D022.idx  spirv_cfg.hpp.5A9DE2B772D206E1.idx  spirv_cross_parsed_ir.hpp.78DD1C98F7AE42A0.idx  vk_mem_alloc.h.E8AD20B391AFD75D.idx  vulkan_core.h.2D7281F93679E225.idx  vulkan_structs.hpp.40FF21024B9F7534.idx  vulkan_to_string.hpp.D319F7DD5EB00B93.idx  vulkan_video_codec_h264std.h.45AB92585CCA5B4E.idx  vulkan_video_codec_h265std_decode.h.8DF5845F50CA99FF.idx
include/assimp/: config.h
include/engine/: buffer.hpp  commandpool.hpp  descriptormanager.hpp  engine.hpp  file_reader.hpp  handle.hpp  model.hpp  model_loader.hpp  pipelinemanager.hpp  queue.hpp  renderer.hpp  shader.hpp  sorted_vec.hpp  texture.hpp  window.hpp
include/vma/: vma.h
lib/cmake/assimp-5.3/: assimpTargets-release.cmake
src/: CMakeLists.txt  buffer.cpp  commandpool.cpp  engine.cpp  main.cpp  model_loader.cpp  queue.cpp  shader.cpp  texture.cpp  window.cpp
src/assets/shaders/: default_textured.frag  default_textured.vert  main.frag  main.vert
src/renderer/: pipelinemanager.cpp  renderer.cpp
